--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,13 @@
 pom.xml
 *.jar
 *.class
-.lein-deps-sum
-.lein-failures
-.lein-plugins
 /bin
 .settings/ccw.repl.cmdhistory.prefs
-watchabledir/
 *.swp
 
 test/com/klauer/java_watcher/scratch.clj
 
 scratch/scratch.clj
 /second-watchabledir
+
+wiki/
